# iop-json-generator

./: .gitignore  LICENSE  README.md
.github/workflows/: jazzy_build.yaml  main.yaml  noetic_build.yml
fkie_iop_json_generator/: CMakeLists.txt  install.sh  package.xml  setup.py
fkie_iop_json_generator/cmake/: jsidl_pyxb.cmake
fkie_iop_json_generator/fkie_iop_json_generator/: json_generator.py
fkie_iop_json_generator/scripts/: jsidl2json.py
fkie_iop_json_generator/xsd/: jsidl_plus.xsd
