<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_json_generator</name>
  <version>1.0.0</version>
  <description>Generates JSON messages from JAUS-IDL files</description>

  <author email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- <depend>python-pyxb</depend> -->

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
